# calendar-sync

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  delete_busy.py  mint_ebac.py  mint_ews_authcode.py  mint_ews_device.py  mint_ews_from_apple.py  mint_ews_token.py  mint_outlook_token.py  mint_token.py  probe_exo_token.py  pyproject.toml  test_ews_dataplane.py
.github/workflows/: deploy.yaml
calendar_sync/: __main__.py  config.py  sync.py
calendar_sync/calendars/: __init__.py  base.py  caldav_calendar.py  exchange_calendar.py  google_calendar.py  outlook_calendar.py
calendar_sync/db/: models.py  session.py
calendar_sync/utils/: env.py  time.py
charts/calendar-sync/: Chart.yaml  values.yaml
charts/calendar-sync/templates/: configmap.yaml  cronjob.yaml  pvc.yaml  secret.yaml
deploy/: README.md  cronjob.yaml  externalsecret.yaml  kustomization.yaml  pvc.yaml
tests/: test_db_models.py  test_utils_time.py
