# pyproject.toml

[project]
name = "calendar-sync"
version = "0.1.0"
description = "Sync busy events across multiple calendars (Google, Outlook, CalDAV)"
authors = [
    { name="Dmitrii Balabanov", email="dimonb@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client==2.167.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "O365==2.1.2",
    "caldav==1.4.0",
    "SQLAlchemy==2.0.40",
    "pytz==2025.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["calendar_sync"]
