# pyproject.toml

[project]
name = "calendar-sync"
version = "0.1.0"
description = "Sync busy events across multiple calendars (Google, Outlook, CalDAV)"
authors = [
    { name="Dmitrii Balabanov", email="dimonb@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["calendar_sync"]

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.3"
poethepoet = "^0.34.0"


[tool.poetry.dependencies]
caldav = "^1.4.0"
google-api-python-client = "^2.169.0"
pytz = "^2025.2"
icalendar = "^6.2.0"
sqlalchemy = "^2.0.40"
python-dotenv = "^1.1.0"
pyyaml = "^6.0.2"
python-dateutil = "^2.9.0.post0"
google-auth = "^2.40.1"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
uptrace = "^1.31.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
structlog = "^25.3.0"
pydantic = "^2.11.4"
pydantic-settings = "^2.2.1"

[tool.poe.tasks.app]
cmd = "python -m calendar_sync"

[tool.poe.tasks.deploy]
cmd = "poetry build-docker"
